# CodeTool

./: CMakeLists.txt  Main.qml  addressCalculationTool.qml  address_Tool.cpp  address_Tool.h  main.cpp  qml.qrc
